--- a/index.html
+++ b/index.html
@@ -50,16 +50,157 @@
             <p class="sign-second">Account & Lists</p>
         </div>
 
-        <div class="return">
+        <div class="return border">
             <p class="return-first">Return</p>
             <p class="return-second">& Order</p>
         </div>
 
-        <div class="cart-logo">
+        <div class="cart-logo border">
             <i class="fa-solid fa-cart-shopping"></i>  
             <p class="cart">Cart</p>        
         </div>
         </div>
+        <div class="panel">
+            <div class="panel-all border">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+            <div class="panel-ops">
+                <p class="TodayDeal border">Todays Deal</p>
+                <p class="Customers Service border">Customers Service</p>
+                <p>Registry</p>
+                <p>Gift Cards</p>
+                <p>Sell</p>
+            </div>
+            <div class="panel-deals border">
+                Shop deals in Electronics
+            </div>
+        </div>
     </header>
+    <div class="Hero-section">
+        <div class="Hero-msg">
+            <pre>You are on Amazon.  You can also shop from Pakistan.   </pre><a href="http://www.amazon.com">Click on Amazon</a>
+        </div>
+    </div>
+
+    <div class="shop-section">
+        <div class="box1 box">
+            <div class="box-content">
+                <h2>Shop deals in Fashion</h2>
+                <div class="box-img" style="background-image: url('box1_image.jpg') "></div>
+                <p>see more</p> 
+            </div>
+            </div>   
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Accessories</h2>
+                <div class="box-img" style="background-image: url('box2_image.jpg') "></div>
+                <p>see more</p> 
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Furniture</h2>
+                <div class="box-img" style="background-image: url('box3_image.jpg') "></div>
+                <p>see more</p> 
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Mobile Phones</h2>
+                <div class="box-img" style="background-image: url('box4_image.jpg') "></div>
+                <p>see more</p> 
+            </div>
+        </div>
+        <div class="box5 box">
+            <div class="box-content">
+                <h2>Cosmatics</h2>
+                <div class="box-img" style="background-image: url('box5_image.jpg') "></div>
+                <p>see more</p> 
+            </div>
+        </div>
+        <div class="box6 box">
+            <div class="box-content">
+                <h2>Pets</h2>
+                <div class="box-img" style="background-image: url('box6_image.jpg') "></div>
+                <p>see more</p> 
+            </div>
+        </div>
+        <div class="box7 box">
+            <div class="box-content">
+                <h2>Toys</h2>
+                <div class="box-img" style="background-image: url('box7_image.jpg') "></div>
+                <p>see more</p> 
+            </div>
+        </div>
+        <div class="box8 box">
+            <div class="box-content">
+                <h2>Cloths</h2>
+                <div class="box-img" style="background-image: url('box8_image.jpg') "></div>
+                <p>see more</p> 
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="footer-panel1">
+            Back to Top
+        </div>
+
+        <div class="footer-panel2">
+        <ul>
+            <p>Get to Know us</p>
+            <a>Careers</a>
+            <a>Blog</a>
+            <a>About Amazon</a>
+            <a>Investor Relations</a>
+            <a>Amazon Devices</a>
+            <a>Amazon Science</a>
+        </ul>
+
+        <ul>
+            <p>Make Money with us</p>
+            <a>Host an Amazon Hub</a>
+            <a>Self-Publish with Us</a>
+            <a>Advertise Your Products</a>
+            <a>Sell apps on Amazon</a>
+            <a>Sell products on Amazon</a>
+            <a>Sell on Amazon Business</a>
+        </ul>
+
+        <ul>
+            <p>Amazon Payment Products</p>
+            <a>Amazon Currency Converter</a>
+            <a>Reload Your Balance</a>
+            <a>Shop with Points</a>
+            <a>Amazon Business Card</a>
+        </ul>
+
+        <ul>
+            <p>Amazon and COVID-19</p>
+            <a>Your Account</a>
+            <a>Your Orders</a>
+            <a>Shipping Rates & Policies</a>
+            <a>Returns & Replacements</a>
+            <a>Manage Your Content and Devices</a>
+            <a>Help</a>
+        </ul>
+
+        </div>
+        <div class="footer-panel3">
+            <div class="logo"></div>
+        </div>
+
+        <div class="footer-panel4">
+            <div class="pages">
+                <a>Conditions of Use</a>
+                <a>Privacy Notice</a>
+                <a>Consumer Health Data Privacy Disclosure</a>
+                <a> Your Ads Privacy Choices</a>
+            </div>
+            <div class="copyrights">
+                © 1996-2025, Amazon.com, Inc. or its affiliates
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
